--- a/.github/workflows/alioth-release.yml
+++ b/.github/workflows/alioth-release.yml
@@ -204,16 +204,28 @@ jobs:
             -e 's/^# CONFIG_KPM is not set/CONFIG_KPM=y/' \
             -e 's/^CONFIG_KPM=n/CONFIG_KPM=y/' \
             "$DEFCONFIG_FILE"
+          if ! grep -q "^CONFIG_KPM\|^# CONFIG_KPM" "$DEFCONFIG_FILE"; then
+              echo "CONFIG_KPM=y" >> "$DEFCONFIG_FILE"
+              echo "INFO: CONFIG_KPM was missing and has been appended."
+          fi
           
           sed -i \
             -e 's/^# CONFIG_KALLSYMS is not set/CONFIG_KALLSYMS=y/' \
             -e 's/^CONFIG_KALLSYMS=n/CONFIG_KALLSYMS=y/' \
             "$DEFCONFIG_FILE"
+          if ! grep -q "^CONFIG_KALLSYMS\|^# CONFIG_KALLSYMS" "$DEFCONFIG_FILE"; then
+              echo "CONFIG_KALLSYMS=y" >> "$DEFCONFIG_FILE"
+              echo "INFO: CONFIG_KALLSYMS was missing and has been appended."
+          fi
 
           sed -i \
             -e 's/^# CONFIG_KALLSYMS_ALL is not set/CONFIG_KALLSYMS_ALL=y/' \
             -e 's/^CONFIG_KALLSYMS_ALL=n/CONFIG_KALLSYMS_ALL=y/' \
             "$DEFCONFIG_FILE"
+          if ! grep -q "^CONFIG_KALLSYMS_ALL\|^# CONFIG_KALLSYMS_ALL" "$DEFCONFIG_FILE"; then
+              echo "CONFIG_KALLSYMS_ALL=y" >> "$DEFCONFIG_FILE"
+              echo "INFO: CONFIG_KALLSYMS_ALL was missing and has been appended."
+          fi
           
           echo "KPM kernel configurations enabled in $DEFCONFIG_FILE."
           fi
