--- a/.github/workflows/alioth-release.yml
+++ b/.github/workflows/alioth-release.yml
@@ -29,6 +29,12 @@ on:
           - aosp
           - aosp-21
         default: neutron
+      Rekernel:
+        description: 'Enable rekernel(tks patch for prslc)'
+        required: true
+        options:
+          - enable
+          - disable
       kernelsu_version:
         description: 'KernelSU Version'
         required: true
@@ -40,7 +46,7 @@ on:
           - 'rksu'
           - 'sukisu'
           - 'noksu'
-      additional_function:
+      Additional_function:
         description: 'Additional Functions'
         required: true
         type: choice
@@ -118,6 +124,20 @@ jobs:
         run: |
           cd kernel_tree
           bash nextpatch.sh
+
+      - name: Patch Kernel of Re:Kernel
+        if: github.event.inputs.Rekernel == 'enable'
+        run: |
+          cd kernel_tree
+          PATCH_FILE="/tmp/Patches/Rekernel/4.19_rekernel_full_alioth-fd.patch"
+
+          if [ -f "$PATCH_FILE" ]; then
+            cp /tmp/Patches/Rekernel/4.19_rekernel_full_alioth-fd.patch ./
+            patch -p1 < 4.19_rekernel_full_alioth-fd.patch || true
+            echo "Re:Kernel Patched."
+          else
+            echo "Your kernel not supported it."
+          fi
 
       - name: Change different battery type
         if: matrix.kernel == 3
