--- a/.github/workflows/alioth-release.yml
+++ b/.github/workflows/alioth-release.yml
@@ -130,13 +130,18 @@ jobs:
         if: github.event.inputs.Rekernel == 'enable'
         run: |
           cd kernel_tree
-          PATCH_FILE="/tmp/Patches/Rekernel/4.19_rekernel_full_alioth-fd.patch"
-
-          if [ -f "$PATCH_FILE" ]; then
-            cp /tmp/Patches/Rekernel/4.19_rekernel_full_alioth-fd.patch ./
-            patch -p1 < 4.19_rekernel_full_alioth-fd.patch || true
-            echo "Re:Kernel Patched."
+          PATCH_URL="https://raw.githubusercontent.com/Yosaki-sonako/NonGKI_Kernel_Build/refs/heads/main/Patches/Rekernel/4.19_rekernel_full_alioth-fd.patch"
+          PATCH_FILENAME="4.19_rekernel_full_alioth-fd.patch"
+            echo "Downloading patch from $PATCH_URL..."
+            curl -LSsf "$PATCH_URL" -o "$PATCH_FILENAME"
+            
+          if [ $? -ne 0 ]; then
+            echo "::error::Failed to download the Re:Kernel patch file. Skipping patch application."
+            exit 1
           fi
+            echo "Applying Re:Kernel patch..."
+            patch -p1 < "$PATCH_FILENAME" || true
+          echo "Re:Kernel Patched."
 
       - name: Change different battery type
         if: matrix.kernel == 3
