--- a/.github/workflows/alioth-release.yml
+++ b/.github/workflows/alioth-release.yml
@@ -279,6 +279,10 @@ jobs:
             cp out/arch/arm64/boot/Image.gz ../Image.gz
             mv out/arch/arm64/boot/dtb.img ../alioth-normal-gpustk-dtb
             mv out/arch/arm64/boot/dtbo.img ../alioth-stock-dtbo-aosp.img
+          elif [[ "${{ matrix.kernel }}" == 4 ]]; then
+            cp out/arch/arm64/boot/Image.gz ../Image.gz
+            mv out/arch/arm64/boot/dtb.img ../alioth-normal-gpustk-dtb
+            mv out/arch/arm64/boot/dtbo.img ../alioth-stock-dtbo-aosp.img
           else
             mv out/arch/arm64/boot/dtb.img ../alioth-effcpu-gpustk-dtb
             mv out/arch/arm64/boot/dtbo.img ../alioth-stock-dtbo-miui.img
@@ -331,7 +335,7 @@ jobs:
     needs: build
     strategy:
       matrix:
-        kernel: [1, 2, 3]
+        kernel: [1, 2, 3, 4]
     runs-on: ubuntu-latest
 
     steps:
@@ -383,6 +387,8 @@ jobs:
             echo "ZIP_NAME=[FD-][ksu-${{ github.event.inputs.CODENAME }}-$COMPILED_DATE]" >> $GITHUB_ENV
           elif [[ "${{ matrix.kernel }}" == "2" ]]; then
             echo "ZIP_NAME=[FD-][susfs-${{ github.event.inputs.CODENAME }}-$COMPILED_DATE]" >> $GITHUB_ENV
+          elif [[ "${{ matrix.kernel }}" == "4" ]]; then
+            echo "ZIP_NAME=[FD-][ksun-${{ github.event.inputs.CODENAME }}-$COMPILED_DATE]" >> $GITHUB_ENV
           else
             echo "ZIP_NAME=[FD-][noksu-${{ github.event.inputs.CODENAME }}-$COMPILED_DATE]" >> $GITHUB_ENV
           fi
