--- a/.github/workflows/alioth-release.yml
+++ b/.github/workflows/alioth-release.yml
@@ -279,7 +279,8 @@ jobs:
             cp out/arch/arm64/boot/Image.gz ../Image.gz
             mv out/arch/arm64/boot/dtb.img ../alioth-normal-gpustk-dtb
             mv out/arch/arm64/boot/dtbo.img ../alioth-stock-dtbo-aosp.img
-          else
+          elif [[ "${{ matrix.kernel }}" == 4 ]]; then
+            cp out/arch/arm64/boot/Image.gz ../Image.gz
             mv out/arch/arm64/boot/dtb.img ../alioth-effcpu-gpustk-dtb
             mv out/arch/arm64/boot/dtbo.img ../alioth-stock-dtbo-miui.img
           fi
@@ -383,10 +384,10 @@ jobs:
             echo "ZIP_NAME=[FD-][ksu-${{ github.event.inputs.CODENAME }}-$COMPILED_DATE]" >> $GITHUB_ENV
           elif [[ "${{ matrix.kernel }}" == "2" ]]; then
             echo "ZIP_NAME=[FD-][susfs-${{ github.event.inputs.CODENAME }}-$COMPILED_DATE]" >> $GITHUB_ENV
+          elif [[ "${{ matrix.kernel }}" == "3" ]]; then
+            echo "ZIP_NAME=[FD-][noksu-${{ github.event.inputs.CODENAME }}-$COMPILED_DATE]" >> $GITHUB_ENV
           elif [[ "${{ matrix.kernel }}" == "4" ]]; then
             echo "ZIP_NAME=[FD-][ksun-${{ github.event.inputs.CODENAME }}-$COMPILED_DATE]" >> $GITHUB_ENV
-          else
-            echo "ZIP_NAME=[FD-][noksu-${{ github.event.inputs.CODENAME }}-$COMPILED_DATE]" >> $GITHUB_ENV
           fi
       
       - name: Upload Flashable Kernel Zip
